--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -23,12 +23,12 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677626.md#1" target="_blank">【历史回眸】乱世行春秋事 灭共肃谍的戴笠</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/11/1111260756281944-150x120.jpg" align ="left"></a>近日，中共军事情治官员王立强在澳洲投诚，揭秘中共特工活动对香港、台湾及国际社会的全面、强力渗透，引发全球关注。在中共窃政前，素有蒋介石佩剑之称的军统戴笠，有着超常的灭共肃谍才能，令当时的共匪闻风丧胆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685480.md#1" target="_blank">【花意诗心】菊花 贞秀馨香霜下杰</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/17e52bb74bbd3a8653fea5808359211c-150x120.jpg" align ="left"></a>时光匆匆，“江涵秋影雁初飞”好像只在昨天，而今却已入冬了。寒气日重，寒风愈劲，草木变衰，众花多已飘零凋残。但菊花却盛开着，许多还都花香浓郁，鲜明耀眼。如同陶渊明在《和郭主簿（其二）》诗中的赞叹，“芳菊开林耀，青松冠岩列。怀此贞秀姿，卓为霜下杰。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:31 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687689.md#1" target="_blank">浣溪沙．叶问</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/20171129_122239-150x120.jpg" align ="left"></a> 家住寒山第几重？ 如霞彩锦炫层峰。 菊花香里共霜浓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:30 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank">古中国最美宝镜 在日本展放大唐光彩</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/f7863197b6067c36a6b3badbfb861333-150x120.jpg" align ="left"></a>大唐文化风华霞光远射世界各地，日本的“正仓院”正是收藏一道道大唐文化绚烂霞光的聚宝库。来看古中国最美的铜镜——平螺钿背宝镜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank">他们感染瘟疫 又因何死而复生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1610090941512483-150x120.jpg" align ="left"></a>清朝大医家刘奎著作《松峰说疫》，不仅阐述了瘟疫产生的原因，对不同的病症，还讲解了具体疗法。除了阐述医理、药性、方剂之外，他又列举了一些染疫身亡，又死而复生的例子，以举证冥冥之中存在的力量，对人命运的影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693379.md#1" target="_blank">七律：好雪</a><br></h3>又是纷扬飞好雪， 苍天着意抚神州。 丰姿飘逸循神韵， 漫舞轻盈任自由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693372.md#1" target="_blank">诗歌：悼陈彦霖</a><br></h3>香消玉殒世皆怜， 毒手摧花未雪冤。 血洒尘寰遗愤恨， 尸抛大海化潮仙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 11:59 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693114.md#1" target="_blank">台湾古典诗：奇迹</a><br></h3> 回流科技正萌芽，带动台湾就业加， 再创四龙奇迹造，振兴经济福邦家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693111.md#1" target="_blank">调笑令．婆罗花开</a><br></h3> 珍惜， 珍惜， 真念金毫神笔。 戳穿红恶谎言， 真相真言善传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11692314.md#1" target="_blank">诗歌：决裂中共</a><br></h3> 世人觉醒 决裂中共向新生 香港全民反迫害......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 10:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690354.md#1" target="_blank">诗歌：回首</a><br></h3> 往昔风狂雨瓢泼 满江风浪夜如何 今朝高处回首看 一路诗韵一路歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687716.md#1" target="_blank">诗歌：感恩大法</a><br></h3>茫茫人海情缠绵，恩怨情仇迷风烟 乍惊回天梯高悬，法喜佛雨浇心田......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:39 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687681.md#1" target="_blank">五律：钟</a><br></h3> 大音挥壮伟，高响激苍茫。 晓色敲魂梦，晚霞惊客肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687667.md#1" target="_blank">诗歌：友聚</a><br></h3> 挚友聚一门，品茶论古今。 畅抒胸中意，俱是蓬来人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_3.htm">http://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
