--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank">古中国最美宝镜 在日本展放大唐光彩</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/f7863197b6067c36a6b3badbfb861333-150x120.jpg" align ="left"></a>大唐文化风华霞光远射世界各地，日本的“正仓院”正是收藏一道道大唐文化绚烂霞光的聚宝库。来看古中国最美的铜镜——平螺钿背宝镜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:59 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank">他们感染瘟疫 又因何死而复生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1610090941512483-150x120.jpg" align ="left"></a>清朝大医家刘奎著作《松峰说疫》，不仅阐述了瘟疫产生的原因，对不同的病症，还讲解了具体疗法。除了阐述医理、药性、方剂之外，他又列举了一些染疫身亡，又死而复生的例子，以举证冥冥之中存在的力量，对人命运的影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686762.md#1" target="_blank">研究：完美主义渐成社会通病 亟需干预良策</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686762.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/people-2557396_1280-150x120.jpg" align ="left"></a>一项最新研究显示，在过去的25年里，完美主义倾向者大幅增加，且无男女差异性。这一结果令研究团队深感忧虑，他们认为迫切需要采取预防措施，包括减少严厉和控制性教养方式以及社会文化影响，同时有必要对那些深陷完美主义的人进行干预。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 4:08 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686738.md#1" target="_blank">如何分割时间才能提高学习效率？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_132856586_Subscription_L-150x120.jpg" align ="left"></a>一天当中每个小时段似乎都一样，其实不然。受生物钟、生理韵律、咖啡因、饮食习惯和精力消耗等诸多因素的影响，我们的学习效率在一天当中也是在不断变化的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686708.md#1" target="_blank">出国留学如何克服文化冲击</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_87638453_Subscription_L-150x120.jpg" align ="left"></a>文化冲击是在陌生环境中遇到不合时宜的感觉。到了新国家的最初兴奋渐渐消退后，你发现很多之前认为理所当然的事情在新环境下并不受到认同，这就是“文化适应”一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:47 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685078.md#1" target="_blank">【哲理轮回】塞翁失马</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/b3d95c3b7e6653bcdc22b5f38639db46-150x120.jpg" align ="left"></a>很多人都听说过“塞翁失马”的故事。这个故事说明，遇到事情不要过于悲观，也不要过于乐观，要用一种平常心对待的道理。一时看一件事情的好坏，到时候不见得就是当时所认为的好与坏。事情是随着外部环境不断发展而发生变化的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 11:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/7/10/n10552918.md#1" target="_blank">【名句故事】我辈岂是蓬蒿人</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/7/10/n10552918.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/28e01e5b759eff8bedf05292ca8749bd-150x120.jpg" align ="left"></a>我岂是久处草野的碌碌无为之辈？比喻踌躇滿志、高度自信的心态。语出李白《南陵别儿入京》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677870.md#1" target="_blank">天地清明引(120) 明光殒－棠棣花凋1</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/flower-2516146_1280-150x120.jpg" align ="left"></a>白允儿回禀师父，而后回返义军，找寻白门柳。是夜，正在赶路，忽然草丛之中，燃起一个火星儿。转眼之间，四周起焰，白允儿身陷火海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685250.md#1" target="_blank">许其正：海唱</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/1711221056351758-150x120.jpg" align ="left"></a>海浪在轻轻地吟唱着一首诗。  一波接着一波，海浪在涌起，向海滩涌进，激起了许多白色泡沫，它们的吟唱便传来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:03 AM			</td></tr>
@@ -14,17 +20,8 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682250.md#1" target="_blank">面临生死抉择时 他们选择了舍生取义</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/11/1511162034332775-150x120.jpg" align ="left"></a>太史公司马迁说，“人固有一死，或重于泰山，或轻于鸿毛，用之所趋异也。”古代君子认为，在面临生死选择的关键时刻，只要自己的行为符合自己的道德追求，哪怕是为了一件小事去死，即舍生取义，他们也丝毫不会犹豫。先秦时期，这样的故事非常多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 11:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682272.md#1" target="_blank">现代聊斋故事：追着她打的雷</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682272.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/flash-731488_640-150x120.jpg" align ="left"></a>在房山看守所时，有个当地的中年妇女，大家叫她陈大姨儿，我记得好像是上访进来的。一天大家闲聊，有个女人抱怨她婆婆如何不好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 8:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669779.md#1" target="_blank">【才子佳人】史上第一位和亲公主刘细君</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669779.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/0ba02d6c66a7c9e6de3a344d387ba6e7-150x120.jpg" align ="left"></a>刘细君出生在扬州，她是汉武帝兄弟刘非的孙女，被称为“江都公主”。其父因谋反被处死，家族受牵连，细君因年幼得以幸免。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 7:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682129.md#1" target="_blank">【爸妈必修课】哺乳建立安全感 否则后患无穷</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682129.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Tu1_shutterstock_116263561-150x120.jpg" align ="left"></a>视频：哺乳阶段必须要做的一件事情！否则日后会导致各种难以解决的问题！
-
-本文刊载于旧金山11月23日教育版
-每周为您献上旧金山最新消息
-责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 6:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/9/30/n8353538.md#1" target="_blank">古代渔家生活的纪录片──《江行初雪图》</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/9/30/n8353538.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/4f17e9d37174b02d6e8a908e55e28f7e-150x120.jpg" align ="left"></a>江面布满粼粼波纹，细看发现他是用毛笔以中锋一上一下、很富韵律感地把水波描绘出来，似乎这样才足以反映风势紧冽的吹拂，也营造出江面森森辽阔、大自然威严得令人摒息的一面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/13/5/1/n3859658.md#1" target="_blank">素未谋面的两人   一诺千金守半生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/13/5/1/n3859658.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/the-Book-on-Filial-Piety-1-1-150x120.jpg" align ="left"></a>程、刘二人，在相隔数千里之外，闻问与音讯都不通、不知，是生是死更难预料的情况下，彼此却各自矢志贞洁、守义，积三十余年仍如一日这样的表现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681148.md#1" target="_blank">花10天走350公里 俄邮差送爱到偏远地区</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-890942576-150x120.jpg" align ="left"></a>为了送信到偏远地区，俄罗斯一名邮差花了10天、走了350公里的路。他所递送的显然不光是邮件与包裹，还有满满的爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 3:19 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677738.md#1" target="_blank">天地清明引(118) 明光殒－夜闻禁曲2</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/001-2-150x120.jpg" align ="left"></a>是夜，光风霁月，萧萧夜风，已含春意。丑时，义军营内，再闻禁曲。乐音飘飘渺渺，似清风一阵，抱怀入梦。白门柳起身走出房外，寻声探求，弹者何人。轻步摒息，至光明顶侧崖之上，此处壁立千韧，若非武功卓绝者，皆不可上去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677348.md#1" target="_blank">音乐指挥到底在“指”什么？ 专家告诉你</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c216e83155569316ab40a2c611b3e3c5-150x120.jpg" align ="left"></a>在漫长的音乐史中，“指挥”算是新兴行业，约在公元1810年左右，音乐作品变得越来越复杂，指挥的需求也开始浮现。在贝多芬时代之前也有指挥，但没有如此不可或缺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:23 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank">【汉武帝传】之九：“王霸杂用” 制度焕然</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-150x120.jpg" align ="left"></a>历史上很多人对汉武帝有很高的赞誉，其中唐代著名大臣虞世南有一段论述非常有名：“汉武承六世之业，海内殷富，又有高人之资，故能总揽英雄，驾御豪杰，内兴礼乐，外开边境，制度宪章，焕然可述。”几乎将汉武帝的一生功绩做了精彩概括。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687681.md#1" target="_blank">五律：钟</a><br></h3> 大音挥壮伟，高响激苍茫。 晓色敲魂梦，晚霞惊客肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:24 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687667.md#1" target="_blank">诗歌：友聚</a><br></h3> 挚友聚一门，品茶论古今。 畅抒胸中意，俱是蓬来人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685305.md#1" target="_blank">作文选登：当我独处时</a><br></h3>独处的时光，不一定是空虚的。在独处时，也是一种放松，可以从事自己的乐趣。在这一分一秒的时间里，体会时间的可贵，也使我能在人生中，拥有片刻乐趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685298.md#1" target="_blank">童谣：牵牛花</a><br></h3>牵牛花，藤儿长，
 爬上篱笆爬上房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:22 AM			</td></tr>
@@ -33,6 +30,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679748.md#1" target="_blank">七律：永恒</a><br></h3> 利令智昏人欲懵， 不思道义不思惩。 邪魔歪理迷难醒， 地狱列车狂敢登。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679725.md#1" target="_blank">五律：夏</a><br></h3> 青鸾舞凉扇，玉女倚窗扉。 草木朝天跃，星辰与梦飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679878.md#1" target="_blank">麦立：舒展</a><br></h3> 什么花朵  最美 看海的花朵最美 什么花朵  最美 吹海风的花朵最美......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:02 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679595.md#1" target="_blank">一七令．同修</a><br></h3> 忧。 后果，前由。 轮回苦，几多愁。 缘来缘去，因果自收。 今生逢大法，携手做同修。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 4:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
