--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/13/5/1/n3859658.md#1" target="_blank">素未谋面的两人   一诺千金守半生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/13/5/1/n3859658.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/the-Book-on-Filial-Piety-1-1-150x120.jpg" align ="left"></a>程、刘二人，在相隔数千里之外，闻问与音讯都不通、不知，是生是死更难预料的情况下，彼此却各自矢志贞洁、守义，积三十余年仍如一日这样的表现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681148.md#1" target="_blank">花10天走350公里 俄邮差送爱到偏远地区</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-890942576-150x120.jpg" align ="left"></a>为了送信到偏远地区，俄罗斯一名邮差花了10天、走了350公里的路。他所递送的显然不光是邮件与包裹，还有满满的爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 3:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677738.md#1" target="_blank">天地清明引(118) 明光殒－夜闻禁曲2</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/001-2-150x120.jpg" align ="left"></a>是夜，光风霁月，萧萧夜风，已含春意。丑时，义军营内，再闻禁曲。乐音飘飘渺渺，似清风一阵，抱怀入梦。白门柳起身走出房外，寻声探求，弹者何人。轻步摒息，至光明顶侧崖之上，此处壁立千韧，若非武功卓绝者，皆不可上去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677348.md#1" target="_blank">音乐指挥到底在“指”什么？ 专家告诉你</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c216e83155569316ab40a2c611b3e3c5-150x120.jpg" align ="left"></a>在漫长的音乐史中，“指挥”算是新兴行业，约在公元1810年左右，音乐作品变得越来越复杂，指挥的需求也开始浮现。在贝多芬时代之前也有指挥，但没有如此不可或缺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:23 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank">【汉武帝传】之九：“王霸杂用” 制度焕然</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-150x120.jpg" align ="left"></a>历史上很多人对汉武帝有很高的赞誉，其中唐代著名大臣虞世南有一段论述非常有名：“汉武承六世之业，海内殷富，又有高人之资，故能总揽英雄，驾御豪杰，内兴礼乐，外开边境，制度宪章，焕然可述。”几乎将汉武帝的一生功绩做了精彩概括。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679594.md#1" target="_blank">五律：秋</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1707261846022483-150x120.jpg" align ="left"></a>何由萧瑟出，宋玉问悲凉。 月半身披雪，愁多鬓染霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:06 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank">舵工谋财害命  数十年后遭报应</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/6dbb4c7f2753c201a6e36d06299fb427-150x120.png" align ="left"></a>享受荣华富贵欢乐数十年，上天等到了这一刻才降灾祸来惩罚他，一家遭到灭顶。陈年往事重演了，……借债借得愈久，而所偿还的利息就需要越多！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679403.md#1" target="_blank">青松絮语：被忽略的蓝天</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1811021635502483-150x120.jpg" align ="left"></a>我们会因为专注于某些东西而对另一些东西视而不见、听而不闻。尤其在苦难中，几乎所有的注意力都在眼前的辛苦与对未来的期待上，因而遮罩了很多很美好的东西，就像头顶的蓝天。所以，我们应当提醒自己，无论生活怎样消磨我们的内心，头顶的蓝天一直都在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 6:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671779.md#1" target="_blank">清代医家辑录：治疗疫病  医药之外另有良方</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671779.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1807101144312483-150x120.jpg" align ="left"></a>清代著名医家刘奎，字文甫，号松峰，出生于中医世家，自幼学习医着。曾拜名医郭右陶、黄元御等为师。刘奎精研《内经》、《难经》等医着，对治疗瘟疫独树一帜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671242.md#1" target="_blank">9 岁男孩上课涂鸦被骂翻 现受聘在餐厅画一面墙</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/09cf7d0bb6e5ee3fba749abcba698a3e-150x120.jpg" align ="left"></a>小时候在上课时不专心听课，却只顾着自己画自己的，这时被老师发现后??（我们或许都经历过，下场肯定不好！）；从此冒出来的那一点艺术火花就此灭尽了！不过，幸好英国的9岁男孩遇到开明的父母，他开心的正在餐厅的一大片白墙上做画呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678778.md#1" target="_blank">用音乐帮助宝宝大脑健康发展</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678778.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_193322240-150x120.jpg" align ="left"></a>：怎样用音乐帮助宝宝大脑健康发展？婴儿大脑时刻都在接受音频？
@@ -23,19 +31,8 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668452.md#1" target="_blank">天地清明引(116) 明光殒－侯门画风3</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668452.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/7bf80405f1128b66c759925743ea4c8c-150x120.jpg" align ="left"></a>话说剑器受白门柳所托，前往京城相救严佳人，正巧化解夺命危机，暂将其安置于飞剑门，后接白门柳传书，言双方现下暂按兵不动，令剑器留守飞剑门，密切监视动静，以作后援。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11656286.md#1" target="_blank">楚庄王一鸣惊人称霸天下 却提出“止戈为武”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11656286.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1907081524272483-150x120.jpg" align ="left"></a>楚庄王是春秋五霸之一，但史书上记载，在他即位的头三年，每日都是吃喝玩乐，且荒于政事，下令说“有敢谏者死无赦”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 3:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/21/n11537082.md#1" target="_blank">漫谈中国舞：《兰陵王入阵曲》</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/21/n11537082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Ryouou_in_Itsukushima_Shrine-150x120.jpg" align ="left"></a>《兰陵王入阵曲》是唐代假面舞蹈，根据唐代崔令钦的《教坊记》记载，起源于北齐，盛行于唐代，又称《代面》、《大面》。此舞是表现北齐兰陵王高长恭作战的勇猛英姿，为带有简单情节的男子独舞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 6:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/23/n11675701.md#1" target="_blank">纪实散文：一夜惊梦（11）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/23/n11675701.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/tu1-shutterstock_177027626-2-150x120.jpg" align ="left"></a>先生初出牢笼
-专程去接先生出狱，相握的手，一路没有分开。回家了，终于可以回家了，虽然一脸沧桑，人比黄花瘦，只要能活着回来，夫复何求？
-
-一回家，先去公公坟上祭拜。告诉他老人家九泉之下可以瞑目，数年冤狱，儿子终于回来了。先生匍匐坟头，以头拱土，如乳子般依恋。抓一把黄土，久久地凝视着，涕泗横流。斯人已经远去，只余草色.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 2:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657230.md#1" target="_blank">【命理篇】什么样的命容易夭亡？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/78c0ed795f704f953f62db728f665efd-150x120.png" align ="left"></a>命学的理论不外乎就是效法自然，如果在一个八字中，唯一的用神在地支中，就像一条脚的椅子一样，日后遇到大运或流年的冲撞或合走此唯一用神时，这个命就会倒下来。所以，此种命是可以看得出是容易夭亡的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 8:27 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668443.md#1" target="_blank">天地清明引(115) 明光殒－侯门画风2</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668443.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/7bf80405f1128b66c759925743ea4c8c-150x120.jpg" align ="left"></a>话说严承义细作身份暴露，纳兰手书回传京城，皇甫勃然大怒，令郭络罗整饬官吏，严防通敌。一时之间，朝臣便又自危。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674442.md#1" target="_blank">新诗：青山绿水恣悠游</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674442.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2511e3470b938ed4717d462b0cd60ab8-150x120.jpg" align ="left"></a> 蓊郁林相肩负整座山的绿意与茂密 繁复丰饶足以植梦 湾澳的涧水迎风澎湃......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 12:13 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674443.md#1" target="_blank">五律：冬</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674443.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/11/Fotolia_125369740_Subscription_L-e1480004005808-150x120.jpg" align ="left"></a>抖擞下重天，清癯步自翩。 银须飘七十，白发壮三千。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 12:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662852.md#1" target="_blank">虔诚奉献的法国王后玛丽?莱什琴斯卡与她的品味</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/22f158d09ff251f5f63c8adb768669b4-150x120.jpg" align ="left"></a>法国王后玛丽?莱什琴斯卡（Marie Leszczynska，1703～1768年）在位42年，是法兰西在位最长的凡尔赛宫女主人。这位波兰王室出身的王后忠实而虔诚，对法国的影响很大。她的影响不是政治上的，而是对法国人生活上的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 9:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665554.md#1" target="_blank">从一段艺术史看人类思想的变迁（下）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665554.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/912052210151454-150x120.jpg" align ="left"></a>史学界一般则习惯于把十四到十六世纪间不同于中世纪的一种更为关注人自身理念的思想风貌称为历史上的“人文主义”，可以看作是涵盖于文艺复兴期间的一种思潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 6:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664269.md#1" target="_blank">夺命瘟疫黑死病 曾经败在他的手上</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664269.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/dfaf80edff148dd194032e09ac8dc1ed-150x120.jpg" align ="left"></a>黑死病（鼠疫），有人称其“是比军队更可怕的敌人”。曾经肆虐欧洲，夺走了欧洲1/3人口的黑死病，最近惊现北京。已有媒体报导证实，北京多家医院、宾馆工作人员出现疫病感染及疑似病例。然而，中共“维稳”黑死病疫情，对外隐瞒消息，疫情恐怕比想像的还要严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 6:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/9/11/4/n2711277.md#1" target="_blank">母亲的远见：孩子你长大后千万别入党</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/9/11/4/n2711277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/11/612251329491017-150x120.gif" align ="left"></a>(shown)我母亲一生笃信神佛，与世无争，少言寡语，但却出语不凡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 12:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679595.md#1" target="_blank">一七令．同修</a><br></h3> 忧。 后果，前由。 轮回苦，几多愁。 缘来缘去，因果自收。 今生逢大法，携手做同修。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 4:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679660.md#1" target="_blank">七律：真知</a><br></h3> 心随事易人常变， 此一时兮彼一时。 转换阴晴天亦改， 偏移标准道难持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677411.md#1" target="_blank">一七令．和之曲</a><br></h3> 和。 岁月，如歌。 贤儿媳，好婆婆。 妯娌和睦，无风无波。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:25 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674444.md#1" target="_blank">诗歌：味道</a><br></h3> 细品千年愿，陈香万古禅。 三拍诗酒碗，一串泪珠盘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_5.htm">http://www.epochtimes.com/gb/news2007_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
